--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/Header"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:textColor="@color/black"
