--- a/app/src/main/res/xml/info.xml
+++ b/app/src/main/res/xml/info.xml
@@ -1,9 +1,9 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:minWidth="40dp"
-    android:minHeight="40dp"
+    android:minWidth="146dip"
+    android:minHeight="146dip"
     android:updatePeriodMillis="86400000"
-    android:previewImage="@drawable/preview"
-    android:initialLayout="@layout/widget"
+    android:previewImage="@drawable/gold"
+    android:initialLayout="@layout/main"
     android:resizeMode="horizontal|vertical"
     android:widgetCategory="home_screen">
 </appwidget-provider>
