--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,10 +11,21 @@
         android:textColor="@color/black"
         android:text="@string/header"
         android:gravity="center_horizontal"/>
-
+    <ImageView
+        android:id="@+id/UpdateButton"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:gravity="center"
+        android:background="@color/white"
+        android:src="@drawable/update"/>
     <TableLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:id="@+id/MainTable"/>
+        android:id="@+id/MainTable"
+        android:layout_gravity="center"
+        android:textColor="@color/black"
+        android:textSize="20sp"/>
+
+
 
 </LinearLayout>
