--- a/app/src/main/res/layout/config.xml
+++ b/app/src/main/res/layout/config.xml
@@ -1,47 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <RadioGroup
-            android:id="@+id/rGroup"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <RadioGroup
+        android:id="@+id/rGroup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center">
+
+        <RadioButton
+            android:id="@+id/radio_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center">
-            <RadioButton
-                android:id="@+id/radio_1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checked="true"
-                android:text="@string/goldannotation">
-            </RadioButton>
-            <RadioButton
-                android:id="@+id/radio_2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/silvannotation">
-            </RadioButton>
-            <RadioButton
-                android:id="@+id/radio_3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/platannotation">
-            </RadioButton>
-            <RadioButton
-                android:id="@+id/radio_4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/pallannotation">
-            </RadioButton>
-        </RadioGroup>
-        <Button
+            android:checked="true"
+            android:text="@string/goldannotation"></RadioButton>
+
+        <RadioButton
+            android:id="@+id/radio_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="onUpdateClick"
-            android:text="OK"
-            android:layout_gravity="center">
-        </Button>
+            android:text="@string/silvannotation"></RadioButton>
+
+        <RadioButton
+            android:id="@+id/radio_3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/platannotation"></RadioButton>
+
+        <RadioButton
+            android:id="@+id/radio_4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/pallannotation"></RadioButton>
+    </RadioGroup>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:onClick="onUpdateClick"
+        android:text="OK"></Button>
 </LinearLayout>
 
