--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,40 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:layout_gravity="center"
     android:background="@android:color/white"
-    android:layout_gravity="center">
+    android:orientation="vertical">
 
-    <TextView android:id="@+id/MetalTextView"
+    <TextView
+        android:id="@+id/MetalTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal|center"
         android:text="Обновите, чтобы увидеть имя металла"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_gravity="center_horizontal|center"
-        android:textColor="@android:color/black"/>
+        android:textColor="@android:color/black" />
 
-    <TextView android:id="@+id/ValueTextView"
+    <TextView
+        android:id="@+id/ValueTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal|center"
         android:text="Обновите, чтобы увидеть цену"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_gravity="center_horizontal|center"
-        android:textColor="@android:color/black"/>
+        android:textColor="@android:color/black" />
 
-        <Button
-            android:id="@+id/buttonUpdate"
-            android:layout_width="100dip"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/update"
-            />
+    <Button
+        android:id="@+id/buttonUpdate"
+        android:layout_width="100dip"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="@string/update" />
 
 
     <ImageView
         android:id="@+id/MetalImage"
-        android:layout_height="wrap_content"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|center"
-        android:src="@drawable/needtoupdate"/>
+        android:src="@drawable/needtoupdate" />
 
 </LinearLayout>
