--- a/app/src/main/res/xml/info.xml
+++ b/app/src/main/res/xml/info.xml
@@ -1,9 +1,8 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
+    android:configure="ru.sibsutis.metallwidgetgspp.MetalConfig"
+    android:initialLayout="@layout/main"
     android:minWidth="146dip"
     android:minHeight="146dip"
-    android:updatePeriodMillis="86400000"
     android:previewImage="@drawable/gold"
-    android:initialLayout="@layout/main"
     android:resizeMode="horizontal|vertical"
-    android:configure="ru.sibsutis.metallwidgetgspp.MetalConfig">
-</appwidget-provider>
+    android:updatePeriodMillis="86400000"></appwidget-provider>
